# voice_assistant

./: .gitignore  AUDIO_OUTPUT_GUIDE.md  FIXES_APPLIED.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md
agent/: README.md  package.xml  requirements.txt  setup.py
agent/agent/: agent_node.py
agent/config/: agent_config.yaml
agent/launch/: agent_node.launch.py
agent/prompts/: cami_host_instructions.txt
stt/: README.md  package.xml  requirements.txt  setup.py
stt/launch/: stt_node.launch.py
stt/stt/: stt_node.py
tts/: package.xml  requirements.txt  setup.py
tts/launch/: tts_node.launch.py
tts/tts/: tts_node.py
voice_assistant_core/: README_VAPI.md  env.example  package.xml  requirements.txt  setup.cfg  setup.py
voice_assistant_core/config/: development.yaml  production.yaml
voice_assistant_core/launch/: vapi_voice_assistant.launch.py  voice_assistant_core.launch.py
voice_assistant_core/scripts/: setup_vapi_env.sh
voice_assistant_core/voice_assistant_core/: __init__.py  constants.py  vapi_voice_assistant_node.py  voice_assistant_node.py
voice_assistant_core/voice_assistant_core/audio/: __init__.py  audio_buffer.py  types.py
voice_assistant_core/voice_assistant_core/communication/: __init__.py  esphome_client.py
voice_assistant_core/voice_assistant_core/detection/: __init__.py  turn_detector.py
voice_assistant_core/voice_assistant_core/state/: __init__.py  state_machine.py
voice_assistant_core/voice_assistant_core/utils/: __init__.py  json_utils.py  ros_utils.py
voice_assistant_core/voice_assistant_core/vapi/: __init__.py  vapi_client.py
voice_assistant_msgs/: CMakeLists.txt  package.xml
voice_assistant_msgs/msg/: AssistantState.msg  AudioChunk.msg  AudioStreamMetadata.msg  LLMResponse.msg  TTSAudio.msg  TranscriptionResult.msg  VoiceEvent.msg
voice_assistant_msgs/srv/: GetStatus.srv  ResetAssistant.srv  StartConversation.srv
