<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stt</name>
  <version>1.0.0</version>
  <description>Speech-to-Text package for voice assistant using Deepgram Nova-3 model</description>
  <maintainer email="astra@todo.todo">astra</maintainer>
  <license>MIT</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>voice_assistant_msgs</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-asyncio</exec_depend>
  <exec_depend>python3-json</exec_depend>
  <exec_depend>python3-logging</exec_depend>
  <exec_depend>python3-threading</exec_depend>
  <exec_depend>python3-time</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
