<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_assistant_core</name>
  <version>0.1.0</version>
  <description>Core brain package for ROS2 voice assistant system with ESPHome integration</description>
  <maintainer email="astra@todo.todo">astra</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>voice_assistant_msgs</depend>
  
  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>aioesphomeapi</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
