<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voice_assistant_core</name>
  <version>0.1.0</version>
  <description>VAPI voice assistant integration for ROS2 with ESPHome</description>
  <maintainer email="astra@todo.todo">astra</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>aioesphomeapi</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
